--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="calculating__choose" id="gender">
                     <div id="female" class="calculating__choose-item calculating__choose-item_active">Женщина</div>
-                    <div id="'male" class="calculating__choose-item">Мужчина</div>
+                    <div id="male" class="calculating__choose-item">Мужчина</div>
                 </div>
 
                 <div class="calculating__subtitle">
