--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
         </div>
     </div>
 
-    <script src="js/script.js"></script>
+    <!-- <script src="js/script.js"></script> -->
+    <script src="js/bundle.js"></script>
     <script src="js/parser.js"></script>
 </body>
 </html>
